[gd_scene load_steps=11 format=2]

[ext_resource path="res://Objects/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Main/WorldScript.gd" type="Script" id=2]
[ext_resource path="res://Scripts/EnemyScript/Spawners.gd" type="Script" id=3]
[ext_resource path="res://UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Images/BG/SpaceBGTwo.png" type="Texture" id=5]
[ext_resource path="res://Shaders/new_shadermaterial.tres" type="Material" id=6]
[ext_resource path="res://Scripts/Scrolling/TextureRect.gd" type="Script" id=7]
[ext_resource path="res://Audio/Player/PlayerDeath.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/Music/JXSilverTheme.wav" type="AudioStream" id=9]
[ext_resource path="res://GameMusic.gd" type="Script" id=10]

[node name="CurrentGame" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" parent="." instance=ExtResource( 4 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
material = ExtResource( 6 )
position = Vector2( 208, 568 )
rotation = 4.71239
z_index = 1
collision_layer = 4
collision_mask = 57
speed = 200.0

[node name="Spawners" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="WaveDelay" type="Timer" parent="Spawners"]
one_shot = true
autostart = true

[node name="Node2D" type="Node2D" parent="."]
z_index = -2

[node name="TextureRect" type="TextureRect" parent="Node2D"]
material = ExtResource( 6 )
margin_right = 400.0
margin_bottom = 640.0
rect_clip_content = true
texture = ExtResource( 5 )
expand = true
stretch_mode = 2
script = ExtResource( 7 )
factor = -0.01

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -4.394
autoplay = true
script = ExtResource( 10 )

[connection signal="deathSound" from="Player" to="." method="_on_Player_deathSound"]
[connection signal="fireBullet" from="Player" to="." method="_on_Player_fireBullet"]
[connection signal="displayMessage" from="Spawners" to="." method="_on_Spawners_displayMessage"]
[connection signal="timeout" from="Spawners/WaveDelay" to="Spawners" method="_on_WaveDelay_timeout"]
[connection signal="finished" from="GameMusic" to="GameMusic" method="_on_GameMusic_finished"]
